# azure_ml_eng_nd_udacity

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
project1_optimizing_ml_pipeline/: README.md  udacity_project1_solution.ipynb
project1_optimizing_ml_pipeline/outputs/: bankmarketing-aml-model.pkl  bankmarketing-lgbm-model.joblib  bankmarketing-logit-model.joblib
project1_optimizing_ml_pipeline/scripts/: lgbm_train.py  logit_train.py
project2_operationalizing_machine_learning/: README.md  endpoint.py  logs.py  udacity_project2_solution.ipynb
project2_operationalizing_machine_learning/assets/: diagram.drawio
