[tool.poetry]
name = "azure_ml_eng_nd_udacity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
matplotlib = ">=3.0.2,<=3.2.1"
seaborn = "^0.11.0"
sklearn = "^0.0"
numpy = "^1.19.2"
lightgbm = "^3.0.0"
xgboost = "^1.2.1"
azureml = "^0.2.7"
azure-ml-component = "^0.1.0"
azureml-explain-model = "^1.16.0"
azureml-interpret = "^1.16.0"
ipywidgets = "^7.5.1"
progressbar = "^2.5"
jupyterlab = "^2.2.9"
python-dotenv = "^0.14.0"
pandas = "^1.1.3"
azureml-sdk = "^1.16.0"
azureml-telemetry = "^1.16.0"
azureml-datadrift = "^1.16.0"
azureml-widgets = "^1.16.0"
azureml-contrib-services = "^1.16.0"
azureml-tensorboard = "^1.16.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
