[tool.poetry]
name = "azure_ml_eng_nd_udacity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.8"
azureml-sdk = "^1.19.0"
pandas = "^0.25.3"
lightgbm = "^2.3.0"
scikit-learn = "^0.22.0"
jupyter = "^1.0.0"
jupyterlab = "^2.2.9"
python-dotenv = "^0.15.0"
azureml-widgets = "^1.19.0"
widgetsnbextension = "^3.5.1"
ipywidgets = "^7.5.1"
xgboost = "0.90"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
